# buddy

buddy/: CMakeLists.txt  package.xml
buddy_arm_mimic/: CMakeLists.txt  package.xml
buddy_arm_mimic/scripts/: body_points_detector.py  body_tracker.py  hand_tracker.py  robot_arm_controller.py
buddy_arm_mimic/src/: arm_controller.cpp  body_tracker_node.cpp  buddy_controller.cpp  buddy_controller_v2.cpp
buddy_bringup/: CMakeLists.txt  package.xml
buddy_bringup/config/: buddy.rviz
buddy_bringup/launch/: buddy_face_animal_mask.launch.py  buddy_face_filters.launch.py  buddy_mimic.launch.py  buddy_robot.launch.py  buddy_rviz.launch.py
buddy_communication/: CMakeLists.txt  buddy_hardware_plugin.xml  package.xml
buddy_communication/config/: buddy_controllers.yaml
buddy_communication/launch/: buddy_robot.launch.py
buddy_communication/src/: dynamixel_hardware.cpp
buddy_communication_sim/: CMakeLists.txt  buddy_hardware_plugin_sim.xml  package.xml
buddy_communication_sim/config/: buddy_controllers.yaml
buddy_communication_sim/launch/: buddy_robot.launch.py
buddy_description/: CMakeLists.txt  package.xml
buddy_description/rviz/: buddy.rviz
buddy_description/urdf/: buddy_description.urdf  buddy_description_sim.xacro.urdf
buddy_face_display/: CMakeLists.txt  package.xml  plugins_description.xml
buddy_face_display/include/buddy_face_display/: buddy_face_display.hpp
buddy_face_display/src/: buddy_face_display.cpp
buddy_interfaces/: CMakeLists.txt  package.xml
buddy_interfaces/action/: ProcessResponse.action
buddy_interfaces/msg/: BodyPoints.msg  BodyPosition.msg  HandPosition.msg  LLMStatus.msg  PersonResponse.msg
buddy_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
buddy_moveit2_config/config/: buddy_description.ros2_control.xacro  buddy_description.srdf  buddy_description.urdf.xacro  initial_positions.yaml  kinematics.yaml  ros2_controllers.yaml
buddy_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
coco/: CMakeLists.txt  package.xml
coco_arm_mimic/: CMakeLists.txt  package.xml
coco_arm_mimic/scripts/: body_points_detector.py
coco_arm_mimic/src/: body_tracker_node.cpp  coco_controller.cpp  coco_controller_v2.cpp
coco_bringup/: CMakeLists.txt  package.xml
coco_bringup/config/: coco.rviz  coco_mimic.rviz  coco_rviz_camera.rviz
coco_bringup/launch/: coco_face_animal_mask.launch.py  coco_face_filters.launch.py  coco_mimic.launch.py  coco_robot.launch.py  coco_rviz.launch.py  coco_web_controller.launch.py
coco_communication/: CMakeLists.txt  coco_hardware_plugin.xml  package.xml
coco_communication/config/: coco_controllers.yaml
coco_communication/launch/: coco_robot.launch.py
coco_communication/src/: dynamixel_hardware.cpp
coco_communication_sim/: CMakeLists.txt  package.xml
coco_communication_sim/launch/: coco_robot.launch.py
coco_description/urdf/: coco_description.urdf  coco_description_moveit.urdf  coco_description_sim.xacro.urdf
coco_face_display/: CMakeLists.txt  package.xml  plugins_description.xml
coco_face_display/include/coco_face_display/: coco_face_display.hpp
coco_face_display/src/: coco_face_display.cpp
coco_interfaces/: CMakeLists.txt  package.xml
coco_interfaces/msg/: BodyPoints.msg  FaceLandmarks.msg  PoseResult.msg
coco_joysticks/: CMakeLists.txt  package.xml
coco_joysticks/launch/: coco_joysticks.launch.py
coco_joysticks/src/: coco_controller.cpp
coco_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
coco_moveit2_config/config/: coco_description.ros2_control.xacro  coco_description.srdf  coco_description.urdf.xacro  coco_description_moveit.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
coco_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
