<package format="3">
  <name>buddy_face_display</name>
  <version>0.1.0</version>
  <description>
    RViz2 plugin to display robot face expressions in a specified location of the robot model.
  </description>
  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pluginlib</depend>
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>